# sing

./: LICENSE  README.md  pyproject.toml
demos/: inference_and_learning.ipynb  linear_gaussian.ipynb  neural_data_gpslds.ipynb  poisson_place_cell.ipynb
sing/: __init__.py  initialization.py  inputs.py  kernels.py  likelihoods.py  plotting.py  quadrature.py  sde.py  simulate_data.py  sing.py
sing/utils/: general_helpers.py  sing_helpers.py
